--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -22,7 +22,7 @@ $logo-color: black;
 $logo-accent-color: #2196f3;
 
 $hero-text-color: #fff;
-$hero-background-image: url(../../images/hero-bg.jpg);
+$hero-background-image: url(../images/hero-bg.jpg);
 
 $about-title-block-color: rgba(47, 48, 58, 0.8);
 
