--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -57,6 +57,7 @@ $modal-background-color: #fff;
 $modal-close-border-color: rgba(0, 0, 0, 0.1);
 $modal-close-icon-color: black;
 $modal-close-hover-color: #2196f3;
+$modal-title-color: #212121;
 $modal-menu-background-color: #fff;
 $modal-menu-text-color: #212121;
 $modal-menu-accent-color: #2196f3;
