--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -2,6 +2,7 @@
   display: none;
   @media screen and (min-width: $desktop-brk-point) {
     display: block;
+    padding-top: 0;
   }
 }
 .about-list {
